# codex_login_tools

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
apps/admin/: Dockerfile  package-lock.json  package.json
apps/admin/src/: app.ts  cad-routes.ts  cad-store.ts  server.ts  store.ts
apps/admin/test/: admin-api.test.ts  cad-api.test.ts
apps/admin/ui/: index.html  vite.config.ts
apps/admin/ui/src/: main.ts  style.css
apps/cad-dxf-mcp/: README.md  mcp-entry.json  pyproject.toml
apps/cad-dxf-mcp/cad_dxf_mcp/: __init__.py  drawing.py  geotech.py  server.py
apps/cad-dxf-mcp/tests/: test_drawing.py  test_geotech.py
apps/desktop/: package.json  tsconfig.json
apps/desktop/public/: index.html  renderer.js  styles.css
apps/desktop/test/: gateway-controller.test.ts  settings-store.test.ts  update-service.test.ts
apps/gateway/: package.json  tsconfig.json
apps/gateway/src/: app.ts  codex-cad-config.ts  codex-config.ts  server.ts
apps/gateway/test/: codex-cad-config.test.ts  codex-config.test.ts  gateway.test.ts
apps/windows-client/: AppDialog.cs  BinaryDownloadGuard.cs  CadMcpConfigWriter.cs  CadModels.cs  CadSync.cs  ClientLog.cs  ClientUpdateFailureStore.cs  ClientUpdater.cs  CodexAuthWriter.cs  CodexConfigWriter.cs  CodexInstaller.cs  CodexLoginTools.Win.csproj  DeviceIdentity.cs  DownloadUrlHelper.cs  GatewayServer.cs  MainForm.cs  Models.cs  Program.cs  ScaledForm.cs  SettingsDialog.cs  SettingsStore.cs  TutorialDialog.cs
docs/: Codex-CAD-代理集成-可行性设计书.md  Phase0-交付说明.md  任务进度书.md
(+11 files in other folders)
